# OpenGL-Renderer-Rust

./: CMakeLists.txt  Cargo.toml  README.md  build.rs  build_errors.txt  check_errors.txt
assets/shaders/: lit.vert  lit_color.frag  lit_textured.frag  point_shadow_depth.frag  point_shadow_depth.geom  point_shadow_depth.vert  shadow_depth.vert  skybox.frag  skybox.vert  ui.vert  ui_color.frag  ui_text.frag
src/: config.rs  input.rs  main.rs  texture.rs
src/app/: mod.rs
src/assets/: manager.rs  mod.rs  paths.rs
src/camera/: mod.rs
src/game/: mod.rs
src/importer/: mod.rs
src/importer/formats/: blend.rs  fbx.rs  mod.rs  obj.rs
src/input/: keyboard.rs  mod.rs  mouse.rs
src/light/: components.rs  directional.rs  mod.rs  point.rs  spotlight.rs
src/logic/: controller.rs
src/math/: mod.rs  ray.rs  vector2d.rs  vector3d.rs
src/modes/: basic.rs  cube.rs  mod.rs
src/primitives/: capsule.rs  cube.rs  mod.rs  plane.rs  skybox.rs  sphere.rs
src/renderer/: mod.rs
src/scene/: collider.rs  context.rs  manager.rs  material.rs  material_factory.rs  mod.rs  model.rs  object.rs  transform.rs
src/shaders/: library.rs  mod.rs  part.rs  program.rs  texture.rs
src/shadow/: mod.rs
src/shapes/: circle.rs  cube.rs  mod.rs  rectangle.rs  triangle.rs  vector2d.rs
src/time/: mod.rs
src/ui/: button.rs  context_menu.rs  inspector.rs  manager.rs  mod.rs  text_renderer.rs
src/window/: glfw_window.rs  mod.rs
