[package]
name = "opengl_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = "0.58.0"
gl = "0.14.0"
image = "0.24"
glam = "0.30.9"
rusttype = "0.9"
russimp = { git = "https://github.com/jkvargas/russimp", features = ["static-link"] }

[build-dependencies]
cmake = "0.1"

[patch.crates-io]
russimp-sys = { git = "https://github.com/jkvargas/russimp-sys" }
